Fixed bug with horizontal scroll

--- a/client/src/styles/Header.scss
+++ b/client/src/styles/Header.scss
@@ -1,5 +1,5 @@
 .Header{
-    width: 100vw;
+    width: 100%;
     height: 6rem;
     position: absolute;
     z-index: 200;
